# embassy

./: ci.sh
embassy-nxp/: Cargo.toml
embassy-nxp/src/: lib.rs
examples/lpc55s69/: Cargo.toml
