[package]
name = "embassy-nxp"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.0"
critical-section = "1.1.2"
embassy-hal-internal = { version = "0.2.0", path = "../embassy-hal-internal", features = ["cortex-m", "prio-bits-2"] }
embassy-sync = { version = "0.7.0", path = "../embassy-sync" }
lpc55-pac ={version="0.5.0", optional=true}
defmt = { version = "1", optional = true }
log = "0.4.27"
log-to-defmt = { version = "0.1.0", optional = true}

[features]
default = ["rt"]
rt = ["lpc55-pac/rt"]
lpc55=["dep:lpc55-pac"]

## Enable [defmt support](https://docs.rs/defmt) and enables `defmt` debug-log messages and formatting in embassy drivers.
defmt = ["dep:defmt", "embassy-hal-internal/defmt", "embassy-sync/defmt"]
## Enable debug logs
log-to-defmt = ["dep:log-to-defmt"]

